Fixed Vertical Spacing between Sections

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,5 +3,9 @@
 }
 
 #formContainer {
-    padding: 10%;
+    padding: 5% 10%;
+}
+
+.main-section {
+    min-height: auto;
 }
